--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.gitignore.io/api/java,linux,macos,windows,eclipse,intellij,visualstudiocode
-# Edit at https://www.gitignore.io/?templates=java,linux,macos,windows,eclipse,intellij,visualstudiocode
+# Created by https://www.gitignore.io/api/java,linux,macos,maven,windows,eclipse,intellij,visualstudiocode
+# Edit at https://www.gitignore.io/?templates=java,linux,macos,maven,windows,eclipse,intellij,visualstudiocode
 
 ### Eclipse ###
 .metadata
@@ -221,6 +221,18 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
@@ -257,4 +269,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.gitignore.io/api/java,linux,macos,windows,eclipse,intellij,visualstudiocode
+# End of https://www.gitignore.io/api/java,linux,macos,maven,windows,eclipse,intellij,visualstudiocode
