--- a/.gitignore
+++ b/.gitignore
@@ -270,3 +270,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/java,linux,macos,maven,windows,eclipse,intellij,visualstudiocode
+.idea/
