--- a/.gitignore
+++ b/.gitignore
@@ -167,7 +167,6 @@ fabric.properties
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.nar
 *.ear
@@ -271,3 +270,6 @@ $RECYCLE.BIN/
 
 # End of https://www.gitignore.io/api/java,linux,macos,maven,windows,eclipse,intellij,visualstudiocode
 .idea/
+.idea/artifacts/IndustrialFootwearWebPortal_javaEEApplication_exploded.xml
+.idea/artifacts/IndustrialFootwearWebPortal_javaEEApplication_exploded.xml
+IndustrialFootwearWebPortal.iml
