--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <servlet-mapping>
+        <servlet-name>footwearwebportal</servlet-name>
+        <url-pattern>/webportal/*</url-pattern>
+    </servlet-mapping>
+
+
+    <servlet>
+        <servlet-name>footwearwebportal</servlet-name>
+        <servlet-class>footwearwebportal.serverInit</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
 </web-app>
