--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,12 +15,35 @@
     </servlet>
 
     <filter>
-        <filter-name>AuthenticationFilter</filter-name>
-        <filter-class>footwearwebportal.AuthenticationFilter</filter-class>
+        <filter-name>ManagerFilter</filter-name>
+        <filter-class>footwearwebportal.ManagerFilter</filter-class>
     </filter>
     <filter-mapping>
-        <filter-name>AuthenticationFilter</filter-name>
-        <url-pattern>/auth/*</url-pattern>
+        <filter-name>ManagerFilter</filter-name>
+        <url-pattern>/manager/*</url-pattern>
     </filter-mapping>
+
+    <filter>
+        <filter-name>SupervisorFilter</filter-name>
+        <filter-class>footwearwebportal.SupervisorFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>SupervisorFilter</filter-name>
+        <url-pattern>/supervisor/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>EmployeeFilter</filter-name>
+        <filter-class>footwearwebportal.EmployeeFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>EmployeeFilter</filter-name>
+        <url-pattern>/employee/*</url-pattern>
+    </filter-mapping>
+
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error.html</location>
+    </error-page>
 
 </web-app>
