--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,13 +10,13 @@
 
     <servlet>
         <servlet-name>footwearwebportal</servlet-name>
-        <servlet-class>footwearwebportal.serverInit</servlet-class>
+        <servlet-class>footwearwebportal.servlet.serverInit</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
 
     <filter>
         <filter-name>ManagerFilter</filter-name>
-        <filter-class>footwearwebportal.ManagerFilter</filter-class>
+        <filter-class>footwearwebportal.filter.ManagerFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>ManagerFilter</filter-name>
@@ -25,7 +25,7 @@
 
     <filter>
         <filter-name>SupervisorFilter</filter-name>
-        <filter-class>footwearwebportal.SupervisorFilter</filter-class>
+        <filter-class>footwearwebportal.filter.SupervisorFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>SupervisorFilter</filter-name>
@@ -34,7 +34,7 @@
 
     <filter>
         <filter-name>EmployeeFilter</filter-name>
-        <filter-class>footwearwebportal.EmployeeFilter</filter-class>
+        <filter-class>footwearwebportal.filter.EmployeeFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>EmployeeFilter</filter-name>
